# django-todo-project

./: README.md  pyproject.toml
todo_manager/templates/: index.html
todo_manager/todo_manager/: settings.py  urls.py
